[FIX] remove empty side-toggle-container on mobile

--- a/themes/base_files/css/tiki_base.css
+++ b/themes/base_files/css/tiki_base.css
@@ -3414,6 +3414,10 @@ body.fullscreen.tiki.navbar-padding {
   margin-top: -0.8rem;
   display: flex; }
 
+@media (max-width: 767.98px) {
+  .side-col-toggle-container {
+    display: none; } }
+
 @media (min-width: 992px) {
   .hide_zone_left #col2, .hide_zone_right #col3 {
     display: none; }
